force-app/main/default/objects/Lead/fields/MGA__c.field-meta.xml
<CustomField>
    <fullName>MGA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AssistNow Token requested.</description>
    <inlineHelpText>AssistNow Token requested. If checked, an AssistNow Token needs to be generated on the converted Contact by AssistNow Request button.</inlineHelpText>
    <label>AssistNow</label>
    <type>Checkbox</type>
</CustomField>