force-app/main/default/objects/Lead/fields/NBIOT_Amount_of_Data_per_Transmit__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Amount_of_Data_per_Transmit__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Amount of Data per Transmit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>