force-app/main/default/objects/Lead/fields/NBIOT_Battery_Capacity__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Battery_Capacity__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Battery Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>