force-app/main/default/objects/Lead/fields/NBIOT_Battery_Part_No__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Battery_Part_No__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Battery Part No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>