force-app/main/default/objects/Lead/fields/NBIOT_Current_Qty_w_Communication_Unit__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Current_Qty_w_Communication_Unit__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Current Qty w. Communication Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>