force-app/main/default/objects/Lead/fields/NBIOT_Date_of_Field_Trial__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Date_of_Field_Trial__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Date of Field Trial</label>
    <type>Date</type>
</CustomField>