force-app/main/default/objects/Lead/fields/NBIOT_Detailed_Description_End_Device__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Detailed_Description_End_Device__c</fullName>
    <description>For NB-IoT Form</description>
    <inlineHelpText>For NB-IoT Form</inlineHelpText>
    <label>NBIOT Detailed Description End Device</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>