force-app/main/default/objects/Lead/fields/NBIOT_Device_Operation_Temperature_Range__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Device_Operation_Temperature_Range__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Device Operation Temperature Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>