force-app/main/default/objects/Lead/fields/NBIOT_Email_of_your_u_blox_contact__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Email_of_your_u_blox_contact__c</fullName>
    <description>For NB-IoT form</description>
    <inlineHelpText>For NB-IoT form</inlineHelpText>
    <label>NBIOT Email of your u-blox contact</label>
    <type>Email</type>
</CustomField>