force-app/main/default/objects/Lead/fields/NBIOT_Exp_Uplink_Transmit_Occasion__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Exp_Uplink_Transmit_Occasion__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Exp. Uplink Transmit Occasion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>