force-app/main/default/objects/Lead/fields/NBIOT_Exp_Years_of_Operation_in_Field__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Exp_Years_of_Operation_in_Field__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Exp Years of Operation in Field</label>
    <length>5</length>
    <type>Text</type>
</CustomField>