force-app/main/default/objects/Lead/fields/NBIOT_Field_FW_Update_Procedure_Required__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Field_FW_Update_Procedure_Required__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Field FW Update Procedure Required</label>
    <length>5</length>
    <type>Text</type>
</CustomField>