force-app/main/default/objects/Lead/fields/NBIOT_Field_Trial_Planned__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Field_Trial_Planned__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Field Trial Planned</label>
    <length>5</length>
    <type>Text</type>
</CustomField>