force-app/main/default/objects/Lead/fields/NBIOT_Freq_Bands_Considered__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Freq_Bands_Considered__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Freq Bands Considered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>