force-app/main/default/objects/Lead/fields/NBIOT_Interfaces_requested__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Interfaces_requested__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Interfaces requested</label>
    <length>100</length>
    <type>Text</type>
</CustomField>