force-app/main/default/objects/Lead/fields/NBIOT_Nested_Design_Needed__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Nested_Design_Needed__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Nested Design Needed</label>
    <length>5</length>
    <type>Text</type>
</CustomField>