force-app/main/default/objects/Lead/fields/NBIOT_No_of_Modules_for_Prototype__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_No_of_Modules_for_Prototype__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT No of Modules for Prototype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>