force-app/main/default/objects/Lead/fields/NBIOT_Preferred_Type_of_FW_Update__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Preferred_Type_of_FW_Update__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Preferred Type of FW Update</label>
    <length>100</length>
    <type>Text</type>
</CustomField>