force-app/main/default/objects/Lead/fields/NBIOT_Protocol_Entities__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Protocol_Entities__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Protocol Entities</label>
    <length>100</length>
    <type>Text</type>
</CustomField>