force-app/main/default/objects/Lead/fields/NBIOT_Purchasing_Account_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Purchasing_Account_Reference_Name__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Purchasing Account Reference Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>