force-app/main/default/objects/Lead/fields/NBIOT_Region__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Region__c</fullName>
    <description>For NB-IoT form</description>
    <inlineHelpText>For NB-IoT form</inlineHelpText>
    <label>NBIOT Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>