force-app/main/default/objects/Lead/fields/NBIOT_Region_City_of_Field_Trial__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Region_City_of_Field_Trial__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Region/City of Field Trial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>