force-app/main/default/objects/Lead/fields/NBIOT_Requirement_of_Lab_Trial__c.field-meta.xml
<CustomField>
    <fullName>NBIOT_Requirement_of_Lab_Trial__c</fullName>
    <description>For NB-IoT Project Form</description>
    <inlineHelpText>For NB-IoT Project Form</inlineHelpText>
    <label>NBIOT Requirement of Lab Trial</label>
    <length>5</length>
    <type>Text</type>
</CustomField>