force-app/main/default/objects/Lead/fields/New_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Application_Type__c</fullName>
    <description>Based on the values of global picklist, New Application Type.</description>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Application_Type</valueSetName>
    </valueSet>
</CustomField>