force-app/main/default/objects/Lead/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscribe to Customer email</description>
    <inlineHelpText>Subscribe to Customer email</inlineHelpText>
    <label>Customer email</label>
    <type>Checkbox</type>
</CustomField>