force-app/main/default/objects/Lead/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>Made to be used for email template</description>
    <formula>ConvertedOpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>