force-app/main/default/objects/Lead/fields/Press_Releases__c.field-meta.xml
<CustomField>
    <fullName>Press_Releases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Press Releases</label>
    <type>Checkbox</type>
</CustomField>