force-app/main/default/objects/Lead/fields/Product_News__c.field-meta.xml
<CustomField>
    <fullName>Product_News__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From webform News Subscription via Field Of Interest, to be converted to Contact: Product News</description>
    <inlineHelpText>From webform News Subscription via Field Of Interest, to be converted to Contact: Product News</inlineHelpText>
    <label>Product News</label>
    <type>Checkbox</type>
</CustomField>