force-app/main/default/objects/Lead/fields/Products_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_Of_Interest__c</fullName>
    <inlineHelpText>From Project Information Form (if Lead is generated through that form). Copied to Opportunity.</inlineHelpText>
    <label>Products Of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>