force-app/main/default/objects/Lead/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Imported from Project Information Form field Project Name, will be used for the Opportunity Name after conversion (Name on Convert window will be overwritten).</description>
    <inlineHelpText>Imported from Project Information Form field Project Name, will be used for the Opportunity Name after conversion (Name on Convert window will be overwritten).</inlineHelpText>
    <label>Project Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>