force-app/main/default/objects/Lead/fields/Project_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Project_Tracking__c</fullName>
    <label>Project Tracking #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>