force-app/main/default/objects/Lead/fields/Purchased_Items__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Items__c</fullName>
    <inlineHelpText>Items purchased on online shop.</inlineHelpText>
    <label>Shop Items</label>
    <type>TextArea</type>
</CustomField>