force-app/main/default/objects/Lead/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <label>Shop Project Info</label>
    <type>TextArea</type>
</CustomField>