force-app/main/default/objects/Lead/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <inlineHelpText>Request entered via web form of by hand. To be followed up.</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>