force-app/main/default/objects/Lead/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <description>Requestor email from webform. It is being used in Global distributor Approval Process in opportunity for email response</description>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>