force-app/main/default/objects/Lead/fields/RFPD_Contact__c.field-meta.xml
<CustomField>
    <fullName>RFPD_Contact__c</fullName>
    <inlineHelpText>RFPD Area Sales Person</inlineHelpText>
    <label>Contact</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>uB_Office__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>RFPD_Area_Sales_Contact</valueSetName>
    </valueSet>
</CustomField>