force-app/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Stage of new opportunity</inlineHelpText>
    <label>Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>