force-app/main/default/objects/Lead/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <inlineHelpText>Person who entered the project information on disti web form</inlineHelpText>
    <label>Submitter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>