force-app/main/default/objects/Lead/fields/TEST_Product__c.field-meta.xml
<CustomField>
    <fullName>TEST_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be deleted</description>
    <inlineHelpText>To be deleted</inlineHelpText>
    <label>TEST Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>