force-app/main/default/objects/Lead/fields/Thingstream_Domain__c.field-meta.xml
<CustomField>
    <fullName>Thingstream_Domain__c</fullName>
    <description>Thingstream Domain name provided through Hubspot</description>
    <label>Thingstream Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>