force-app/main/default/objects/Lead/fields/uB_Contact__c.field-meta.xml
<CustomField>
    <fullName>uB_Contact__c</fullName>
    <inlineHelpText>Person at u-blox who has sent the web form.</inlineHelpText>
    <label>uB Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>