force-app/main/default/objects/Lead/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <label>uB Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Hongkong</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
                <color>#B6E32E</color>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Rest of APAC</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>