force-app/main/default/objects/Lead/fields/Webinar_email__c.field-meta.xml
<CustomField>
    <fullName>Webinar_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscribe to Webinar email</description>
    <inlineHelpText>Subscribe to Webinar email</inlineHelpText>
    <label>Webinar email</label>
    <type>Checkbox</type>
</CustomField>