force-app/main/default/objects/Lead/fields/Wireless_ASP__c.field-meta.xml
<CustomField>
    <fullName>Wireless_ASP__c</fullName>
    <inlineHelpText>Expected ASP of wireless product</inlineHelpText>
    <label>Wireless ASP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>