force-app/main/default/objects/Lead/fields/Wireless_Product__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Product__c</fullName>
    <inlineHelpText>Wireless product of interest</inlineHelpText>
    <label>Wireless Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>