force-app/main/default/objects/Lead/fields/X1st_Bounce__c.field-meta.xml
<CustomField>
    <fullName>X1st_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the last or second but last mailing bounced.</inlineHelpText>
    <label>1st Bounce</label>
    <type>Checkbox</type>
</CustomField>