force-app/main/default/objects/Lead/fields/X1st_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Bounce_Date__c</fullName>
    <label>1st Bounce Date</label>
    <type>Date</type>
</CustomField>