force-app/main/default/objects/Lead/validationRules/Country_and_thingstream_should_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_and_thingstream_should_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Country), ISBLANK(Thingstream_Domain__c))</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please select country of the lead.</errorMessage>
</ValidationRule>