force-app/main/default/objects/Lead/validationRules/Market_Classification_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Market_Classification_Error</fullName>
    <active>true</active>
    <description>Shows error when the lead is covered without the Market Classification.</description>
    <errorConditionFormula>AND(IsConverted,Market_Classification__c==&apos;&apos;  )</errorConditionFormula>
    <errorDisplayField>X1st_Bounce__c</errorDisplayField>
    <errorMessage>Please select Market Segment before converting the lead.</errorMessage>
</ValidationRule>