force-app/main/default/objects/Lead/validationRules/Protect_against_Spam.validationRule-meta.xml
<ValidationRule>
    <fullName>Protect_against_Spam</fullName>
    <active>true</active>
    <errorConditionFormula>OR((CONTAINS(LastName, &quot;href&quot;)), (CONTAINS(LastName, &quot;http&quot;)), (CONTAINS(LastName, &quot;guestbook&quot;)),(CONTAINS(Company, &quot;href&quot;)),(CONTAINS(Company, &quot;http&quot;)),(CONTAINS(Company, &quot;guestbook&quot;)))</errorConditionFormula>
    <errorMessage>This is likely a spam entry from a web robot</errorMessage>
</ValidationRule>