force-app/main/default/objects/Lead/listViews/all_leads.listView-meta.xml
<ListView>
    <fullName>all_leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Webform__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>uB_Office__c</columns>
    <columns>Request__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Email_address_probably_invalid__c</columns>
    <columns>Products_Of_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>All Leads</label>
</ListView>