force-app/main/default/objects/Lead/listViews/APACLeads.listView-meta.xml
<ListView>
    <fullName>APACLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Webform__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Products_Of_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>uB_Office__c</field>
        <operation>notEqual</operation>
        <value>Americas,EMEA,Corporate</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Qualified,Unqualified</value>
    </filters>
    <label>APAC Leads</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionAPAC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>