force-app/main/default/objects/Lead/listViews/Business_Development_Americas.listView-meta.xml
<ListView>
    <fullName>Business_Development_Americas</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>ramzi</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>james</value>
    </filters>
    <label>Business Development - Americas</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionAmericas</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>