force-app/main/default/objects/Lead/listViews/CloudLocate_Campaign_Leads.listView-meta.xml
<ListView>
    <fullName>CloudLocate_Campaign_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.URL</columns>
    <columns>Lead_Source_Webform__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Products_Of_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CloudLocate_Redemption_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CloudLocate Campaign Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>