force-app/main/default/objects/Lead/listViews/digi_key_leads.listView-meta.xml
<ListView>
    <fullName>digi_key_leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>DK_Product__c</columns>
    <columns>DK_Product_Center__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>uB_Office__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Email_address_probably_invalid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Digi-Key</value>
    </filters>
    <label>Digi-Key leads</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>