force-app/main/default/objects/Lead/listViews/EMEA_Inside_Leads.listView-meta.xml
<ListView>
    <fullName>EMEA_Inside_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Source_Copy__c</columns>
    <columns>Lead_Source_Webform__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>uB_Office__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Qualified,Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/11/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Webform</value>
    </filters>
    <label>EMEA Inside Leads</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionEMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>