force-app/main/default/objects/Lead/listViews/EMEALeads.listView-meta.xml
<ListView>
    <fullName>EMEALeads</fullName>
    <columns>uB_Office__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Annual_Quantity__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Source_Copy__c</columns>
    <columns>Lead_Source_Webform__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>uB_Office__c</field>
        <operation>equals</operation>
        <value>Americas</value>
    </filters>
    <label>Americas Leads</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionEMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>