force-app/main/default/objects/Lead/listViews/EMEALeadsServiceRegistration.listView-meta.xml
<ListView>
    <fullName>EMEALeadsServiceRegistration</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Source_Copy__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Qualified,Unqualified</value>
    </filters>
    <filters>
        <field>Lead_Source_Webform__c</field>
        <operation>contains</operation>
        <value>Service</value>
    </filters>
    <filters>
        <field>uB_Office__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>EMEA Leads Service Registration</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionAmericas</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>